# Dashboard-bmc

./: # Changelog.md  # Plan de Mantenimiento y Evolución.md  .cursorignore  .cursorrules  .editorconfig  .env.example  .eslintrc.cjs  .eslintrc.json  .gitattributes  .gitignore  .lintstagedrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  AUTONOMOUS-README.md  Ableton.json  CHECKLIST_REVISION_WORKFLOW_AUTOGEN.md  Copia de Prompt-Mercado-Paneles-ARG-v1.md  Dockerfile  EXPORT_SUMMARY.md  GPT_INTEGRATION_GUIDE.md  IA_comparison_report.md  LICENSE  Makefile  Protocolo_PromptMaker_RCT_COE_v1.0.0.md  README.md  api-gateway.js  auto-dashboard.js  auto-startup.js  auto-updater.js  autopilot.js  code-ecosystem-config.json  cursor-desktop-config.json  cursor-integration.js  demo-autonomous.sh  dev-tools.js  docker-compose.yml  ecosystem-integration.js  eslint.config.mjs  feedback-system.js  (+12 more)
.backups/20250929-085153/: Descripciones Models IA.md  Ejemplo-RCT-COE.md  Guia-de-Modelos.md  IA_comparison_report.md  Prompt-Blueprint.md  Prompt-HarryCoder-Shopify-Auditor-v1.0.0.md  Prompt-HarryCoder-Shopify-Auditor-v1.0.0_NEUTRO.md  Prompt-Mercado-Paneles-ARG-v1.md  Prompt_Mastering_Podcast_PEIPM50.md  Prompt_Mastering_Podcast_PEIPM50_NEUTRO.md  Prompt_Mastering_Podcast_PEIPM50_NEUTRO_NEUTRO.md  Protocolo-PromptMaker.md  Protocolo_PromptMaker_RCT_COE_v1.0.0.md  Protocolo_PromptMaker_RCT_COE_v1.0.0_NEUTRO.md  Protocolo_PromptMaker_RCT_COE_v1.0.0__NEUTRO.md  README_Integracion_Maestro_v1.1_v2.2.md  prompt_bms_uruguay.md  prompt_maestro_unificado_v2.1.0.md  proyecto_auditoria_y_mejora_de_temas_shopify_harry_coder_v_1_1.md
.backups/20250929-085241/: Guia-de-Modelos.md  Manual_Encadenamiento_IA.md  README.md  (+3 more)
.devcontainer/: devcontainer.json  postCreate.sh
.github/: .gitignore  AUTOPILOT_REPORT.md  copilot-instructions.md  pull_request_template.md
Code/: .cursorignore  .env.example  .eslintrc.js  .gitignore  .prettierrc  README.md  index.js  jest.config.js  package.json  tsconfig.json
MasterPrompts/: enviar_informe_ahora.py  informe_con_vineta_archivo_2025-09-26.html  informe_diario_2025-09-26.html  informe_muestra_previa_2025-09-27.html
ai/: README.md  system.md
code-env/: .eslintrc.js  .gitignore  QUICKSTART.md  index.js  jest.config.js  jest.setup.js  package.json  pyproject.toml  requirements.txt
code-env/.cursor/: instructions  rules
code-env/.github/workflows/: ci.yml
code-env/config/: environment.yaml
code-env/docs/: CURSOR_SETUP.md  README.md
code-env/scripts/ai-communication/: sync.js
code-env/scripts/automation/: create-project.js
code-env/scripts/deployment/: deploy.js
code-env/scripts/setup/: init.js
code-env/templates/api/: main.py  requirements.txt
code-env/templates/web-app/: README.md  package.json
codigo/: GUIA-INTEGRACION-GPT.md  README.md
codigo-en-gpt/: README.md  contexto-completo.txt  datos-estructurados.json  estudios-integrados.md  prompts-optimizados.md  resumen-exportacion.md
config/: index.js
cursor/: rules.md
docs/: ANALYSIS.md  CURSOR.md  README.md  WORKFLOW.md
scripts/: checks.sh  format.sh  gcal_sync.py  lint.sh  prompt_library_watcher_v2_1.py  requirements.txt  vencimientos_tools.py
server/: package.json
src/: index.ts
tools/: prompt_evolver.py
(+972 files in other folders)
